# ml-dojo

./: .gitattributes  .gitignore
docs/: README.org
huggingface/llm_course/opensource_ai_cookbook/: .gitignore  main.py  pyproject.toml
huggingface/llm_course/opensource_ai_cookbook/exercise/c7583e05/: main.py  pyproject.toml
nlp100/: .gitignore  README.md  chap00.py  pyproject.toml
nlp100/2020/: chap01.py  chap02.py  chap03.py  chap04.ipynb  chap04.py  chap06.ipynb  main.py
paip/exercises/: 1.2.lisp  1.3.lisp  1.4.lisp  1.5.lisp
share/image_processing/: Makefile
texbook/: Makefile  build.ps1  exercise.tex  modes.tex  rebuild.ps1  story.tex
