[project]
name = "c7583e05"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.5.1",
    "duckdb>=1.2.2",
    "model2vec>=0.5.0",
    "sentence-transformers>=4.1.0",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pydantic>=2.11.4",
]
